--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-Transfer money online in seconds with jogpay money transfer. All you need is an email address and jog with a mobile.
+Transfer money online in seconds with jogpay money transfer. All you need is an email address and jog your phone.
+
+JogPay.com
