--- a/readme
+++ b/readme
@@ -1,3 +1,10 @@
 Transfer money online in seconds with jogpay money transfer. All you need is an email address and jog your phone.
 
 JogPay.com
+
+
+
+轻碰支付  触碰支付
+
+
+
